Remove orgId from scheduler DAO interface and implementation
Simplifies OSS implementation by removing multi-tenancy concept from the
DAO interface layer. Orkes can inject orgId within their DAO implementation.

Changes:
- Remove orgId parameter from all 12 DAO interface methods
- Remove orgId field from WorkflowSchedule and WorkflowScheduleExecution models
- Remove DEFAULT_ORG_ID constant
- Update PostgresSchedulerDAO to remove org_id from all SQL queries
- Update SchedulerService to remove all orgId variables and DAO calls
- Add V2 migration to drop org_id columns from database schema
- Update all test mocks and assertions
- Update documentation (AGENTS.md, STRESS_TEST_PLAN.md)

Test results: 82 of 83 tests passing (1 known flaky test)

Co-Authored-By: Claude Sonnet 4.5 <noreply@anthropic.com>